# async-odbc-wrapper

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  FUTURE_VERSIONS.md  LINKS  README.md  TODO.md
dependencies/: CMakeLists.txt
dependencies/cmake/: ForwardCMakeVars.cmake  RequireBoost.cmake  user-config.jam.in
include/AODBC/: aodbc.hpp  async.hpp  config.hpp  environment.hpp  handles.hpp  sql_function_wrappers.hpp  statement.hpp  sync.hpp
include/AODBC/async/: connection.hpp  thread_pool.hpp
include/AODBC/async/result_set/: compact_result_set.hpp  result_set_concept.hpp  standard_result_set.hpp
include/AODBC/sync/: connection.hpp
include/AODBC/sync/result_set/: compact_metadata.hpp  compact_result_set.hpp  compact_row_storage.hpp  metadata.hpp  standard_result_set.hpp  test.hpp
include/AODBC/types/: date.hpp  nullable.hpp  time.hpp  timestamp.hpp  types.hpp
src/: aodbc.hpp  async.hpp  config.hpp  connection.cpp  connection.hpp  environment.hpp  exception.hpp  handles.hpp  log.hpp  main.spec.cpp  result_set.cpp  result_set.hpp  sql_function_wrappers.cpp  sql_function_wrappers.hpp  statement.hpp  statement_base.hpp  sync.hpp
src/async/: connection.hpp  thread_pool.hpp
src/async/detail/: async_connection_wrapper.hpp
src/async/result_set/: compact_result_set.hpp  result_set_concept.hpp  standard_result_set.hpp
src/result_set/: metadata.hpp  result_set_concept.hpp  result_sets.hpp  standard_result_set.hpp
src/row_set/: compact_row_set.hpp  row_set_base.hpp  row_set_metadata.cpp  row_set_metadata.hpp  variant_row_set.hpp
src/sync/: connection.hpp
src/sync/result_set/: bulk_result_set.hpp  compact_metadata.hpp  compact_result_set.hpp  compact_row_storage.hpp  metadata.hpp  result_set_concept.hpp  standard_result_set.hpp
src/types/: date.hpp  decimal.hpp  nullable.hpp  time.hpp  timestamp.hpp  types.hpp
test_executable/: basic_test.hpp  main.cpp  result_set_test.hpp  simple_interface_test.hpp
tests/: arguments.hpp  async_simple_query.spec.cpp  exception_handler.hpp  main.spec.cpp  net.hpp  sync_bulk_query.spec.cpp  sync_simple_query.spec.cpp
